chore: install shiki

--- a/apps/www/app/assets/css/tailwind.css
+++ b/apps/www/app/assets/css/tailwind.css
@@ -7,6 +7,8 @@
 @source "../../../../../packages/elements/src";
 @source "../../../../../packages/shadcn-vue/components";
 @source "../../../../../packages/examples/src";
+@source "../../node_modules/@repo/elements/node_modules/streamdown-vue/dist/*.js";
+
 
 
 @theme inline {
